chore(docs/infra): atualiza README, docker-compose, Dockerfile, migrações e testes

--- a/Api/appsettings.json
+++ b/Api/appsettings.json
@@ -9,5 +9,5 @@
   "ConnectionStrings": {
     "MySql": "Server=localhost;Database=minimal_api;Uid=root;Pwd=root;"
   },
-  "Jwt": "minimal-api-alunos-vamos_lá"
+  "Jwt": "minimal-api-super-secret-key-32bytes-minimum-2025"
 }
